--- a/.github/pr-labeler.yml
+++ b/.github/pr-labeler.yml
@@ -1,3 +1,4 @@
 feature: ['feature/*', 'feat/*']
 bug: ['fix/*', 'bugfix/*', 'bug/*']
 maintenance: ['chore/*', 'maint/*', 'noop/*', 'no-op/*']
+docs: ['docs/*', 'doc/*']
