--- a/examples/ok-mkdocs-custom-extract/mkdocs-test.yml
+++ b/examples/ok-mkdocs-custom-extract/mkdocs-test.yml
@@ -1,3 +1,9 @@
+# This example shows how to set up custom extraction modes. Litcoffee files
+# consist of interspersed Markdown and Coffeescript code. The pattern
+# defined here extracts a documentation page from each such file, consisting of:
+# everything from the beginning of the file to the first line of code
+# (a line indented by at least four spaces), together with any later Markdown
+# block preceded by a comment containing `# DOCPAGE`.
 site_name: Custom Extraction
 plugins:
   - simple:
