--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,23 +6,7 @@ on:
   pull_request:
 
 jobs:
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python
-        uses: actions/setup-python@v2.2.1
-        with:
-          python-version: "3.x"
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install flake8
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Lint
-        run: |
-          ./tests/test_lint.sh
-  build:
+  test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -39,21 +23,26 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y bats gcc
           python -m pip install --upgrade pip
-          pip install -e .
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Test with bats
+      - name: Test
         run: |
-          ./tests/test.bats
+          ./test.sh
 
   check-docs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Set up Python 3
+        uses: actions/setup-python@v2.2.1
+        with:
+          python-version: 3
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Build Docs
-        uses: ./
-        env:
-          DRY_RUN: true
+        run: ./build.sh
       - name: Test html
         uses: chabad360/htmlproofer@v1.1
         with:
