--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,7 +11,7 @@
 		}
 	},
 	"remoteEnv": {
-		"PATH":"${env:PATH}:/home/vscode/.local/bin"
+		"PATH":"${containerEnv:PATH}:/home/vscode/.local/bin"
 	},
 	// Set *default* container specific settings.json values on container create.
 	"settings": {
@@ -40,7 +40,7 @@
 		"shakram02.bash-beautify"
 	],
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "pip3 install --upgrade pip && pip3 install --user -r requirements.txt",
+	"postCreateCommand": "pip install --upgrade pip && pip install --user -r requirements.txt",
 
 	// Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
 	"remoteUser": "vscode"
