--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,9 +10,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2.3.4
-      - name: Setup environment
-        run: |
-          echo "VERSION=$(cat VERSION)" >> $GITHUB_ENV
       - name: Set up Python
         uses: actions/setup-python@v2.2.2
         with:
@@ -22,7 +19,11 @@ jobs:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
           TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
         run: |
-          .github/publish_pypi.sh
+          python -m pip install --upgrade pip
+          pip install setuptools wheel twine
+          pip install -r requirements.txt;
+          python setup.py sdist bdist_wheel
+          twine upload dist/* --verbose
   release-docker:
     runs-on: ubuntu-latest
     steps:
