--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,8 @@
 name: Test
 
 on:
-  push:
-    branches: [release/*]
   pull_request:
+  workflow_dispatch:
 
 jobs:
   lint:
@@ -51,7 +50,7 @@ jobs:
       - name: Set up Python 3
         uses: actions/setup-python@v2.2.2
         with:
-          python-version: 3
+          python-version: "3.x"
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
