--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -37,7 +37,8 @@
 		"redhat.vscode-yaml",
 		"znck.grammarly",
 		"yzhang.markdown-all-in-one",
-		"shakram02.bash-beautify"
+		"shakram02.bash-beautify",
+		"eamodio.gitlens"
 	],
 	// Use 'postCreateCommand' to run commands after the container is created.
 	"postCreateCommand": "pip install --upgrade pip && pip install --user -r requirements.txt",
