--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,10 @@ click==8.0.1
 flake8==3.9.2
 mkdocs-awesome-pages-plugin==2.5.0
 mkdocs-macros-plugin==0.5.5
-mkdocs-material==7.1.6
-mkdocs==1.1.2
+mkdocs-material==7.1.7
+mkdocs==1.2
 mkdocstrings==0.15.1
 pip-upgrader==1.4.15
 pydocstyle==6.1.1
 pymdown-extensions==8.2
+livereload==2.6.3
