--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,9 +42,6 @@ jobs:
       - name: Build Docs
         run: ./build.sh
       - name: Test html
-        uses: chabad360/htmlproofer@v1.1
+        uses: athackst/htmlproofer-action@main
         with:
           directory: "./site"
-          # BANDAID: 404.html site not rendering with correct links
-          # BANDAID: twitter profile has 400 error
-          arguments: --url-ignore https://fonts.gstatic.com,https://twitter.com/althack --allow-hash-href --file-ignore ./site/404.html --internal-domains "${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}"
