--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,14 +17,12 @@ jobs:
         uses: actions/setup-python@v2.3.1
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y bats gcc
-          python -m pip install --upgrade pip
-      - name: Test
-        run: |
-          ./tests/test.sh
+      - name: Lint
+        run: ./tests/run_linters.sh
+      - name: Unit tests
+        run: ./tests/run_unit_tests.sh
+      - name: Integration tests
+        run: ./tests/run_integration_tests.sh
 
   check-docs:
     runs-on: ubuntu-latest
