--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-click==8.0.4
+click==8.1.2
 flake8==4.0.1
 mkdocs-awesome-pages-plugin==2.7.0
-mkdocs-macros-plugin==0.6.4
-mkdocs-material==8.2.6
-mkdocs==1.2.3
+mkdocs-macros-plugin==0.7.0
+mkdocs-material==8.2.8
+mkdocs==1.3.0
 mkdocstrings==0.18.1
 pip-upgrader==1.4.15
 pydocstyle==6.1.1
 pymdown-extensions==9.3
+MarkupSafe==2.1.1
