--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,12 +17,20 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Lint
-        run: ./tests/run_linters.sh
       - name: Unit tests
         run: ./tests/run_unit_tests.sh
       - name: Integration tests
         run: ./tests/run_integration_tests.sh
+
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v3
+        with:
+          python-version: "3.x"
+      - name: Lint
+        run: ./tests/run_linters.sh
 
   check-docs:
     runs-on: ubuntu-latest
