--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,9 @@
 site_name: athackst/mkdocs-simple-plugin
 docs_dir: /tmp/mkdocs-simple/mkdocs-simple-plugin
 plugins:
-  - search
+  - mkdocs-simple-hooks:
+      hooks:
+        on_pre_build: examples.gen_readme:generate
   - simple:
       include_extensions:
         - .yml
@@ -9,8 +11,9 @@ plugins:
         - .pages
         - .bats
         - .sh
-  - macros
   - awesome-pages
+  - macros
+  - search
 edit_uri: ''
 site_url: https://athackst.github.io/mkdocs-simple-plugin
 repo_url: https://github.com/athackst/mkdocs-simple-plugin
