--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,6 +74,9 @@
     "--convention=google",
     "--add-ignore=D415"
   ],
+  "python.linting.pylintArgs": [
+    "--disable=W1514,W0613"
+  ],
   "python.testing.unittestEnabled": true,
   "python.testing.unittestArgs": [
     "-v",
