--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,6 +30,7 @@ markdown_extensions:
   - pymdownx.emoji:
       emoji_index: !!python/name:materialx.emoji.twemoji ''
       emoji_generator: !!python/name:materialx.emoji.to_svg ''
+  - mkdocs-click
 extra:
   social:
     - icon: fontawesome/brands/twitter
