--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Jinja2==3.1.2
 MarkupSafe==2.1.1
 mkdocs==1.3.0
 mkdocs-awesome-pages-plugin==2.7.0
+mkdocs-click==0.6.0
 mkdocs-macros-plugin==0.7.0
 mkdocs-material==8.2.11
 mkdocs-simple-hooks==0.1.5
