--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
-click==8.1.2
+click==8.1.3
 flake8==4.0.1
-Jinja2==3.1.1
+Jinja2==3.1.2
 MarkupSafe==2.1.1
 mkdocs==1.3.0
 mkdocs-awesome-pages-plugin==2.7.0
 mkdocs-macros-plugin==0.7.0
-mkdocs-material==8.2.9
+mkdocs-material==8.2.11
 mkdocs-simple-hooks==0.1.5
 mkdocstrings==0.18.1
+mkdocstrings-python-legacy==0.2.2
 pip-upgrader==1.4.15
 pydocstyle==6.1.1
 pymdown-extensions==9.3
