--- a/.github/workflows/publish_docs.yml
+++ b/.github/workflows/publish_docs.yml
@@ -15,6 +15,8 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: 3
+          cache: 'pip'
+      - run: pip install -r requirements.txt
       - name: Build Docs
         run: ./build.sh
       - name: Publish Docs
