--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,13 +1,7 @@
 site_name: athackst/mkdocs-simple-plugin
 docs_dir: /tmp/mkdocs-simple/mkdocs-simple-plugin
 plugins:
-  - simple:
-      include_extensions:
-        - .yml
-        - .png
-        - .pages
-        - .bats
-        - .sh
+  - simple
   - awesome-pages
   - macros
   - search
