--- a/.github/workflows/publish_docs.yml
+++ b/.github/workflows/publish_docs.yml
@@ -19,5 +19,10 @@ jobs:
       - run: pip install -r requirements.txt
       - name: Build Docs
         run: ./build.sh
+      - name: Setup environment
+        run: |
+          echo "VERSION=$(cat VERSION)" >> $GITHUB_ENV
       - name: Publish Docs
         uses: ./
+        with:
+          version: ${{ env.VERSION }} latest
