--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ click==8.1.3
 flake8==5.0.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+mike==1.1.2
 mkdocs==1.3.1
 mkdocs-awesome-pages-plugin==2.8.0
 mkdocs-click==0.8.0
