--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,55 +1,47 @@
 {
-  "grammarly.userWords": [
-    "Buildx",
-    "QEMU",
-    "WORKDIR",
-    "absmiddle",
-    "action",
+  "cSpell.words": [
+    "althack",
     "athackst",
-    "autoremove",
+    "autobuild",
+    "autopep",
     "bdist",
-    "canonicalize",
-    "changelog",
-    "chmod",
-    "cname",
-    "devcontainer",
-    "devcontainers",
-    "elgohr",
-    "emoji",
-    "entrypoint",
-    "fnmatch",
-    "generator",
-    "github",
-    "heinrichreimer",
-    "jfif",
-    "markdownlint",
+    "codeql",
+    "dockerfiles",
+    "dockerhub",
+    "DOCPAGE",
+    "docstrings",
+    "eamodio",
+    "endfor",
+    "endraw",
+    "fontawesome",
+    "grepout",
+    "htmlproofer",
+    "indentless",
+    "lastindex",
+    "litcoffee",
+    "maint",
+    "markupsafe",
     "materialx",
-    "md",
-    "mkdir",
     "mkdocs",
     "mkdocstrings",
-    "musl",
-    "name",
-    "nargs",
-    "noninteractive",
-    "noreply",
-    "openssh",
-    "peaceiris",
-    "pgrep",
-    "pkill",
+    "mypy",
+    "pycodestyle",
+    "pydocstyle",
     "pygments",
     "pylint",
     "pymdownx",
-    "pymdownx emoji twemoji",
     "pypi",
-    "python",
+    "pytest",
+    "releasebot",
     "sdist",
     "setuptools",
-    "squidfunk",
+    "shakram",
     "superfences",
     "thackston",
     "twemoji",
-    "wheel"
+    "VPNW",
+    "yapf",
+    "yzhang"
   ],
   "files.associations": {
     "*.bats": "shellscript"
