--- a/examples/ok-source-with-snippet/mkdocs-test.yml
+++ b/examples/ok-source-with-snippet/mkdocs-test.yml
@@ -1,5 +1,5 @@
 # This is example shows to to create a snippet from a file.  For example, you 
-# can use a snippet to rerrange contents using inclusion or create a new pages 
+# can use a snippet to rearrange contents using inclusion or create a new pages 
 # per module.
 site_name: ok-source-with-snippet
 plugins:
