Separate default version and add push input option to action

--- a/.github/workflows/publish_docs.yml
+++ b/.github/workflows/publish_docs.yml
@@ -26,3 +26,4 @@ jobs:
         uses: ./
         with:
           version: ${{ env.VERSION }} latest
+          default_version: ${{ github.event.release.tag_name }}
