--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,7 @@
             "justMyCode": true
         },
         {
-            "name": "Build Mkdocs",
+            "name": "Test: Build Mkdocs",
             "type": "python",
             "request": "launch",
             "program": "/home/vscode/.local/bin/mkdocs",
@@ -26,7 +26,7 @@
         },
         {
             // Attach a debugger to an example by running this in the example folder
-            "name": "Build example",
+            "name": "Test: Current example (mkdocs-test.yml)",
             "type": "python",
             "request": "launch",
             "program": "/home/vscode/.local/bin/mkdocs",
