Change include to use glob pattern and iterate

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,7 @@
         "mypy",
         "pycodestyle",
         "pydocstyle",
+        "pyfakefs",
         "pygments",
         "pylint",
         "pymdownx",
