--- a/requirements.txt
+++ b/requirements.txt
@@ -12,5 +12,6 @@ mkdocstrings==0.19.0
 mkdocstrings-python-legacy==0.2.3
 pip-upgrader==1.4.15
 pydocstyle==6.1.1
+pyfakefs==4.6.3
 pymdown-extensions==9.5
 PyYAML==6.0
