Add pip install to prelaunch for debugger

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -198,7 +198,10 @@
       "command": "pwd; cp mkdocs-test.yml mkdocs.yml; /home/vscode/.local/bin/mkdocs_simple_gen --no-build",
       "options": {
         "cwd": "${fileDirname}"
-      }
+      },
+      "dependsOn": [
+        "pip install"
+      ],
     }
   ]
 }
