--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -81,5 +81,8 @@
     "[python]": {
         "editor.tabSize": 4,
         "editor.wordBasedSuggestions": false
-    }
+    },
+    "python.analysis.extraPaths": [
+        "/home/vscode/.local/lib/python3.10/site-packages/"
+    ]
 }
