Update dev settings
* Python linting path
* PR label matches
    * feature -> + new/*
    * maintenance -> upkeep/*
* .gitignore for __pycache__

--- a/.github/pr-labeler.yml
+++ b/.github/pr-labeler.yml
@@ -1,4 +1,4 @@
-feature: ['feature/*', 'feat/*']
+feature: ['feature/*', 'feat/*', 'new/*']
 bug: ['fix/*', 'bugfix/*', 'bug/*']
-maintenance: ['chore/*', 'maint/*', 'noop/*', 'no-op/*']
+maintenance: ['chore/*', 'maint/*', 'noop/*', 'no-op/*', 'upkeep/*']
 docs: ['docs/*', 'doc/*']
