--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,14 +75,17 @@
         ".vscode/*.py",
         "setup.py"
     ],
+    "python.linting.pylintArgs": [
+        "--init-hook='import sys; sys.path.append(\"/home/vscode/.local/lib/python3.10/site-packages\")'"
+    ],
     "python.autoComplete.extraPaths": [
-        "/home/vscode/.local/lib/python3.10/site-packages/"
+        "/home/vscode/.local/lib/python3.10/site-packages"
+    ],
+    "python.analysis.extraPaths": [
+        "/home/vscode/.local/lib/python3.10/site-packages"
     ],
     "[python]": {
         "editor.tabSize": 4,
         "editor.wordBasedSuggestions": false
-    },
-    "python.analysis.extraPaths": [
-        "/home/vscode/.local/lib/python3.10/site-packages/"
-    ]
+    }
 }
