--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,8 @@ plugins:
   - macros
   - search
   - mike
+hooks:
+  - examples/gen_readme.py
 edit_uri: ''
 site_url: https://althack.dev/mkdocs-simple-plugin
 repo_url: https://github.com/athackst/mkdocs-simple-plugin
