--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,12 @@
             "justMyCode": true
         },
         {
+            "name": "Bash: Current File",
+            "type": "bashdb",
+            "request": "launch",
+            "program": "${file}",
+        },
+        {
             "name": "Test: Build Mkdocs",
             "type": "python",
             "request": "launch",
