--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,14 +17,14 @@ jobs:
           cache: 'pip'
       - name: Build and Publish
         env:
-          TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
-          TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+          HATCH_INDEX_USER: ${{ secrets.PYPI_USERNAME }}
+          HATCH_INDEX_AUTH: ${{ secrets.PYPI_PASSWORD }}
         run: |
           python -m pip install --upgrade pip
-          pip install setuptools wheel twine
+          pip install -U hatch
           pip install -r requirements.txt;
-          python setup.py sdist bdist_wheel
-          twine upload dist/* --verbose
+          hatch build
+          hatch publish 
   release-docker:
     runs-on: ubuntu-latest
     steps:
