--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
+cairosvg==2.5.2
 click==8.1.3
 flake8==6.0.0
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 mike==1.1.2
-mkdocs==1.4.1
 mkdocs-awesome-pages-plugin==2.8.0
 mkdocs-click==0.8.0
 mkdocs-macros-plugin==0.7.0
 mkdocs-material==8.5.11
-mkdocstrings==0.19.0
+mkdocs==1.4.1
 mkdocstrings-python-legacy==0.2.3
+mkdocstrings==0.19.0
+pillow==9.3.0
 pip-upgrader==1.4.15
 pydocstyle==6.1.1
 pyfakefs==5.0.0
